--- a/rcplus.css
+++ b/rcplus.css
@@ -129,9 +129,9 @@ th.rc-avatar {
 
 .rcp-notice-remarks {
     display: block;
-    margin-top: 1px;
-    border-top: 1px solid rgba(0, 0, 0, 0.85);
-    padding-top: 1px;
+    margin-top: 4px !important;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    padding-top: 5px;
     font-size: 13px;
     line-height: 1.45;
 }
